# pipeline-rugpull

./: .gitignore  main.py  pyproject.toml
api_datos/: .env example  .gitignore  README.md  config.py  main.py  pyproject.toml  start.sh  stop.sh
api_datos/services/: batcher.py  db.py  drive.py
mlops-stack/: .env  compose.yaml
mlops-stack/airflow/: requirements.txt
mlops-stack/airflow/dags/: 01_extract_bigquery.py  dag_experimentation_thesis.py
mlops-stack/airflow/plugins/src/: feature_engineering.py  labeling.py
mlops-stack/jupyterlab/: Dockerfile
mlops-stack/mlflow/: Dockerfile  mflow_ejecution_proces.ipynb
pipeline/notebooks/: Exploration_mlflow.ipynb  bronze_exploration.ipynb  data_ingestion_exploration.ipynb  heuristis_example.ipynb
pipeline/notebooks/mlflow/artifacts/: xgboost_rugpull.json
proyecto_01/: .env  clean.sh  compose.yaml  deploy.sh
proyecto_01/airflow/: Dockerfile
proyecto_01/jupyterlab/: requirements.txt
proyecto_01/jupyterlab/notebook/: rugpull_experiment.ipynb
proyecto_01/jupyterlab/notebook/.ipynb_checkpoints/: rugpull_experiment-checkpoint.ipynb
proyecto_01/jupyterlab/notebook/reports/: dataset_labeled.csv  profile_events.html  profile_metadata.html  profile_transfers.html
proyecto_01/jupyterlab/notebook/reports/.ipynb_checkpoints/: profile_events-checkpoint.html  profile_metadata-checkpoint.html  profile_transfers-checkpoint.html
proyecto_01/minio/.minio.sys/: format.json
proyecto_01/mlflow/: requirements.txt
proyecto_01/mlflow/minio_image/: Dockerfile
(+27 files in other folders)
